--- a/templates/index.html
+++ b/templates/index.html
@@ -87,7 +87,7 @@
 
         #fileList {
             margin-top: 10px;
-            min-height: 50px;
+            margin-bottom: 10px;
             border: 1px solid #ccc;
             padding: 5px;
         }
