Modified description for create tables

--- a/templates/tables.html
+++ b/templates/tables.html
@@ -232,7 +232,7 @@
         <!-- Create New Tables Section -->
         <div class="section">
             <div class="section-header">Create Tables</div>
-            <p>Please select the dimension and fact table tables to upload. You can drag and drop tables into the area below or click to browse your tables.</p>
+            <p>Use the button to create all dimension and fact tables.</p>
             <button type="button" id="createTablesBtn" class="create-tables-btn">Create Tables</button>
         </div>
     </div>
