Adding data flow page and related route code

--- a/templates/index.html
+++ b/templates/index.html
@@ -199,6 +199,7 @@
         <ul>
             <li><a href="{{ url_for('index') }}">Files</a></li>
             <li><a href="{{ url_for('tables') }}">Tables</a></li>
+            <li><a href="{{ url_for('data_flow') }}">Data Flow</a></li>
         </ul>
     </nav>
     <div class="container">
